--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Assignment 0</title>
+		<title>Anabelle's Portfolio</title>
 	</head>
 	<body>
-		Hello, world!
+		<h1>Projects</h1>
+		<h2>Personas & Storyboarding</h2>
+		<h2>Responsive Redesign</h2>
+		<h2>A/B Testing & Eye Tracking</h3>
+		<h2>Iterative Design and Evaluation</h2>
+		<h2>Development</h2>
+		<h1>About Me</h1>
+		<p>lorem ipsum ...</p>
 	</body>
 </html>
